--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<center>
-<input type="reset" onclick="location.reload()" style="background-color: red" value="reset">
- <span id="diem"></span>
- <canvas id="canvas"></canvas>
+<center style="margin-left: auto">
+    <input type="reset" onclick="location.reload()" style="background-color: red" value="reset">
+    <span id="diem"></span>
+    <canvas id="canvas"></canvas>
 </center>
 <script src="vatcan.js"></script>
 <script src="Qua.js"></script>
