--- a/start.html
+++ b/start.html
@@ -11,6 +11,7 @@
         }
         div{
             margin-left: 45%;
+            margin-top: 20%;
         }
     </style>
 </head>
@@ -26,7 +27,7 @@
         window.location.href = 'index.html';
     }
     function huongdan(){
-        document.getElementById('direction').innerText = "- Dùng phím lên xuống phải trái trên bàn phím để đi chuyển con sâu ăn quả";
+        document.getElementById('direction').innerHTML = "- Dùng phím lên xuống phải trái trên bàn phím để đi chuyển con sâu ăn quả";
 
     }
 </script>
